Added Potion of Soul Render & recipe

--- a/src/main/resources/assets/soulscorch/lang/en_us.json
+++ b/src/main/resources/assets/soulscorch/lang/en_us.json
@@ -2,5 +2,9 @@
     "effect.soulscorch.soulscorch": "Soulscorched",
     "item.soulscorch.blazt_powder": "Blazt Powder",
     "item.soulscorch.blazt_rod": "Blazt Rod",
-    "item.soulscorch.soul_cream": "Soul Cream"
+    "item.soulscorch.soul_cream": "Soul Cream",
+
+    "item.minecraft.potion.effect.soul_render": "Potion of Soul Rendering",
+    "item.minecraft.splash_potion.effect.soul_render": "Splash Potion of Soul Rendering",
+    "item.minecraft.lingering_potion.effect.soul_render": "Lingering Potion of Soul Rendering"
 }
