Added 5 sounds w/ CC when Soulless awakens. Soulless move faster on Soul Sand and Soul Soil. Removed baby Soulless. Updated Soulless texture.

--- a/src/main/resources/assets/soulscorch/lang/en_us.json
+++ b/src/main/resources/assets/soulscorch/lang/en_us.json
@@ -17,5 +17,7 @@
   "sounds.soulscorch.blazt_shooting": "Blazt primes projectile",
   "sounds.soulscorch.blazt_soul_charge": "Blazt shoots",
   "sounds.soulscorch.blazt_breathe_in": "Blazt breathes",
-  "sounds.soulscorch.blazt_breathe_out": "Blazt recovers"
+  "sounds.soulscorch.blazt_breathe_out": "Blazt recovers",
+
+  "sounds.soulscorch.soulless_wake": "Soulless wakes"
 }
