Added Soul Brewing Stand (not functional currently)

--- a/src/main/resources/assets/soulscorch/lang/en_us.json
+++ b/src/main/resources/assets/soulscorch/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "block.soulscorch.soul_brewing_stand": "Soul Brewing Stand",
   "effect.soulscorch.soulscorch": "Soulscorched",
   "item.soulscorch.blazt_powder": "Blazt Powder",
   "item.soulscorch.blazt_rod": "Blazt Rod",
