--- a/src/main/resources/assets/soulscorch/lang/en_us.json
+++ b/src/main/resources/assets/soulscorch/lang/en_us.json
@@ -20,5 +20,6 @@
   "sounds.soulscorch.blazt_breathe_in": "Blazt breathes",
   "sounds.soulscorch.blazt_breathe_out": "Blazt recovers",
 
+  "entity.soulscorch.soulless": "Soulless",
   "sounds.soulscorch.soulless_wake": "Soulless wakes"
 }
