--- a/src/main/resources/assets/soulscorch/lang/en_us.json
+++ b/src/main/resources/assets/soulscorch/lang/en_us.json
@@ -5,6 +5,7 @@
   "item.soulscorch.blazt_rod": "Blazt Rod",
   "item.soulscorch.soul_cream": "Soul Cream",
   "item.soulscorch.soul_charge": "Soul Charge",
+  "item.soulscorch.soul_brewing_stand": "Soul Brewing Stand",
 
   "item.minecraft.potion.effect.soul_render": "Potion of Soul Rendering",
   "item.minecraft.splash_potion.effect.soul_render": "Splash Potion of Soul Rendering",
