--- a/src/main/resources/assets/soulscorch/lang/en_us.json
+++ b/src/main/resources/assets/soulscorch/lang/en_us.json
@@ -1,11 +1,14 @@
 {
   "block.soulscorch.soul_brewing_stand": "Soul Brewing Stand",
   "effect.soulscorch.soulscorch": "Soulscorched",
+  "effect.soulscorch.soul_render": "Soul Rendering",
   "item.soulscorch.blazt_powder": "Blazt Powder",
   "item.soulscorch.blazt_rod": "Blazt Rod",
   "item.soulscorch.soul_cream": "Soul Cream",
   "item.soulscorch.soul_charge": "Soul Charge",
   "item.soulscorch.soul_brewing_stand": "Soul Brewing Stand",
+  "item.soulscorch.soulward_totem": "Soulward Totem",
+  "item.soulscorch.soul_shard": "Soul Shard",
 
   "item.minecraft.potion.effect.soul_render": "Potion of Soul Rendering",
   "item.minecraft.splash_potion.effect.soul_render": "Splash Potion of Soul Rendering",
