Added Iron Bulb Block. Basically the old Copper Bulb. But Soul.

--- a/src/main/resources/assets/minecraft/lang/en_us.json
+++ b/src/main/resources/assets/minecraft/lang/en_us.json
@@ -1,3 +1,5 @@
 {
-  "subtitles.particle.soul_escape": "Souls whisper"
+  "subtitles.particle.soul_escape": "Souls whisper",
+  "subtitles.block.copper_bulb.turn_off": "Bulb turns off",
+  "subtitles.block.copper_bulb.turn_on": "Bulb turns on"
 }
