--- a/src/main/resources/assets/soulscorch/lang/en_us.json
+++ b/src/main/resources/assets/soulscorch/lang/en_us.json
@@ -5,6 +5,8 @@
   "item.soulscorch.soul_brewing_stand": "Soul Brewing Stand",
   "block.soulscorch.soul_slag": "Soul Slag Block",
   "item.soulscorch.soul_slag": "Soul Slag Block",
+  "block.soulscorch.iron_bulb": "Iron Bulb",
+  "item.soulscorch.iron_bulb": "Iron Bulb",
 
   "effect.soulscorch.soulscorch": "Soulscorched",
   "effect.soulscorch.soul_render": "Soul Rendering",
