Renamed Soul Slag Block to Soul Slag

--- a/src/main/resources/assets/soulscorch/lang/en_us.json
+++ b/src/main/resources/assets/soulscorch/lang/en_us.json
@@ -3,8 +3,8 @@
 
   "block.soulscorch.soul_brewing_stand": "Soul Brewing Stand",
   "item.soulscorch.soul_brewing_stand": "Soul Brewing Stand",
-  "block.soulscorch.soul_slag": "Soul Slag Block",
-  "item.soulscorch.soul_slag": "Soul Slag Block",
+  "block.soulscorch.soul_slag": "Soul Slag",
+  "item.soulscorch.soul_slag": "Soul Slag",
   "block.soulscorch.iron_bulb": "Iron Bulb",
   "item.soulscorch.iron_bulb": "Iron Bulb",
 
