Soulborne Cat tweaks. New Icon as well. Having a Soulborne Cat standing up clears Soulscorch from the player.

--- a/src/main/resources/assets/soulscorch/lang/en_us.json
+++ b/src/main/resources/assets/soulscorch/lang/en_us.json
@@ -27,6 +27,7 @@
   "item.soulscorch.blazt_spawn_egg": "Blazt Spawn Egg",
   "item.soulscorch.soulless_spawn_egg": "Soulless Spawn Egg",
   "item.soulscorch.restless_spawn_egg": "Restless Spawn Egg",
+  "item.soulscorch.soulborne_cat_spawn_egg": "Soulborne Cat Spawn Egg",
 
   "entity.soulscorch.blazt": "Blazt",
   "sounds.soulscorch.blazt_ambient": "Blazt bellows",
