Better temp Hytodom texture.

--- a/src/main/java/net/nullcoil/soulscorch/CHANGELOG.txt
+++ b/src/main/java/net/nullcoil/soulscorch/CHANGELOG.txt
@@ -1,8 +1,4 @@
-v1.1.1
+v2.0.0
 
-|----BUG FIXES----|
- - Oops. Forgot the whole "block should be harvestable" bit. The following blocks were affected:
-   - Soul Slag
-   - Soul Brewing Stand
-   - Iron Bulb
- - These items require a pickaxe.
+|----ENTITIES----|
+ - Added Hytodom
