--- a/src/main/resources/assets/soulscorch/lang/en_us.json
+++ b/src/main/resources/assets/soulscorch/lang/en_us.json
@@ -16,6 +16,8 @@
   "item.soulscorch.soul_charge": "Soul Charge",
   "item.soulscorch.soulward_totem": "Soulward Totem",
   "item.soulscorch.soul_shard": "Soul Shard",
+  "item.soulscorch.soul_stone": "Soul Stone",
+  "item.soulscorch.soul_zol": "Soul Zol",
 
   "effect.soulscorch.cat_buff": "Cat Buff",
   "effect.soulscorch.soul_render": "Soul Rendering",
